namespace ApplicationCore.Domain.Enums
{
    public enum EstadoCuenta
    {
        ACTIVA
    }
}
