namespace ApplicationCore.Domain.Enums
{
    public enum EstadoMembresia
    {
        PENDIENTE,
        ACTIVA,
        EXPULSADA,
        ABANDONADA
    }
}
