namespace ApplicationCore.Domain.Enums
{
    public enum EstadoParticipacion
    {
        PENDIENTE,
        ACEPTADA,
        RECHAZADA,
        RETIRADA
    }
}
