namespace ApplicationCore.Domain.Enums
{
    public enum EstadoSolicitud
    {
        PENDIENTE,
        ACEPTADA,
        RECHAZADA,
        CANCELADA
    }
}
