namespace ApplicationCore.Domain.Enums
{
    public enum GeneroJuego
    {
        ACCION,
        AVENTURA,
        ESTRATEGIA,
        RPG,
        DEPORTE,
        OTRO
    }
}
