namespace ApplicationCore.Domain.Enums
{
    public enum RolComunidad
    {
        LIDER,
        COLABORADOR,
        MIEMBRO
    }
}
