namespace ApplicationCore.Domain.Enums
{
    public enum RolEquipo
    {
        ADMIN,
        MIEMBRO
    }
}
