namespace ApplicationCore.Domain.Enums
{
    public enum TipoInvitacion
    {
        COMUNIDAD,
        EQUIPO
    }
}
