namespace ApplicationCore.Domain.Enums
{
    public enum TipoNotificacion
    {
        REACCION,
        COMENTARIO,
        PUBLICACION,
        PROPUESTA_TORNEO,
        UNION_TORNEO,
        SISTEMA,
        MENSAJE,
        ALERTA
    }
}
