namespace ApplicationCore.Domain.Enums
{
    public enum TipoReaccion
    {
        ME_GUSTA,
        OTRO
    }
}
