namespace ApplicationCore.Domain.Enums
{
    public enum Visibilidad
    {
        PUBLICO,
        PRIVADO,
        AMIGOS
    }
}
